--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
         <h2>Struktur Organisasi</h2>
         <p>Berikut adalah susunan kepengurusan kelas yang dipilih melalui musyawarah:</p>
         <ul>
-          <li><strong>Ketua Kelas:</strong> HABIL QODAM WAHYUDI— Koordinator kegiatan & komunikasi internal</li>
+          <li><strong>Ketua Kelas:</strong> Habil Qhodam Wahyudi— Koordinator kegiatan & komunikasi internal</li>
           <li><strong>Wakil Ketua:</strong> ALIA NOVA PRAMITA — Pendamping ketua & penghubung dengan guru</li>
           <li><strong>Sekretaris1:</strong> KEIZYA ADITA ZABRINA — Dokumentasi & administrasi kelas</li>
           <li><strong>sekertaris2:</strong> ANDI NURMAN RISQI — Jaga kebersihan & P3K</li>
           <li><strong>Bendahara:</strong> ADEK ARIFA SETIYANI SYU’AIB — Pengelolaan dana kelas & laporan keuangan</li>
           <li><strong>Divisi IT $ Media Sosial:</strong> MOCH. JABAR ALAM — Pengelola media sosial & website kelas</li>
-          <li><strong>Divisi Publikasi:</strong> HABIL QODAM WAHYUDI — Perencanaan kegiatan & dekorasi</li>
+          <li><strong>Divisi Publikasi:</strong> HABIL QODAM WAHYUD — Perencanaan kegiatan & dekorasi</li>
         </ul>
       </div>
     </div>
@@ -77,9 +77,9 @@
         <h2>Prestasi Unggulan</h2>
         <p>Dalam kurun waktu satu semester, kami telah meraih sejumlah pencapaian membanggakan:</p>
         <ul>
-          <li>🏆 <strong>Juara 1</strong> — Kompetisi Robotik Edukasi (KREASI)</li>
-          <li>🥈 <strong>Juara 2</strong> — Festival Seni & Budaya Pelajar Daerah</li>
-          <li>🥉 <strong>Juara 3</strong> — Lomba Cerdas Cermat Tingkat Sekolah (2025)</li>
+          <li>🏆 <strong>Juara </strong> — Kompetisi Robotik Edukasi (KREASI)</li>
+          <li>🥈 <strong>Juara </strong> — Festival Seni & Budaya Pelajar Daerah</li>
+          <li>🥉 <strong>Juara </strong> — Lomba Cerdas Cermat Tingkat Sekolah (2025)</li>
           <li>🎖️ <strong>Penghargaan Kreativitas</strong> — Desain Poster Hari Pendidikan Nasional</li>
           <li>🌱 <strong>Program Unggulan Sekolah</strong> — "Kelas Hijau" (Pengelolaan Sampah & Tanaman Obat)</li>
         </ul>
@@ -109,9 +109,9 @@
         <button class="filter-btn" data-filter="siswa">Siswa</button>
         <button class="filter-btn" data-filter="guru">Guru</button>
         <button class="filter-btn" data-filter="ketua">Ketua/Wakil</button>
-        <button class="filter-btn" data-filter="it"> IT </button>
-        <button class="filter-btn" data-filter="acara">Divisi Acara</button>
-        <button class="filter-btn" data-filter="kesehatan">Kesehatan</button>
+        <button class="filter-btn" data-filter="it"> Sekertaris </button>
+        <button class="filter-btn" data-filter="acara">Koordinator</button>
+        <button class="filter-btn" data-filter="kesehatan">Bendahara</button>
       </div>
 
       <div class="anggota-grid" id="anggotaContainer">
@@ -211,5 +211,4 @@
   <script src="JS/data.js"></script>
   <script src="JS/main.js"></script>
 </body>
-
 </html>
