--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="logo-wrapper">
         <img src="img/logo.png" alt="Logo Sekolah" class="logo-img" onerror="this.style.display='none'">
-        <div class="logo-text">XI TAV Maju Bersama</div>
+        <div class="logo-text">XI TAV </div>
       </div>
       <div class="nav-right">
         <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">
@@ -212,3 +212,4 @@
   <script src="JS/main.js"></script>
 </body>
 </html>
+
