--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
         <h2>Struktur Organisasi</h2>
         <p>Berikut adalah susunan kepengurusan kelas yang dipilih melalui musyawarah:</p>
         <ul>
-          <li><strong>Ketua Kelas:</strong> Habil Qhodam Wahyudi— Koordinator kegiatan & komunikasi internal</li>
+          <li><strong>Ketua Kelas:</strong> HABIL QODAM WAHYUDI— Koordinator kegiatan & komunikasi internal</li>
           <li><strong>Wakil Ketua:</strong> ALIA NOVA PRAMITA — Pendamping ketua & penghubung dengan guru</li>
           <li><strong>Sekretaris1:</strong> KEIZYA ADITA ZABRINA — Dokumentasi & administrasi kelas</li>
           <li><strong>sekertaris2:</strong> ANDI NURMAN RISQI — Jaga kebersihan & P3K</li>
           <li><strong>Bendahara:</strong> ADEK ARIFA SETIYANI SYU’AIB — Pengelolaan dana kelas & laporan keuangan</li>
           <li><strong>Divisi IT $ Media Sosial:</strong> MOCH. JABAR ALAM — Pengelola media sosial & website kelas</li>
-          <li><strong>Divisi Publikasi:</strong> HABIL QODAM WAHYUD — Perencanaan kegiatan & dekorasi</li>
+          <li><strong>Divisi Publikasi:</strong> HABIL QODAM WAHYUDI — Perencanaan kegiatan & dekorasi</li>
         </ul>
       </div>
     </div>
@@ -212,4 +212,5 @@
   <script src="JS/main.js"></script>
 </body>
 </html>
+
 
